Fixed main graph on Safari

--- a/app/scss/dashboard/_myAccount.scss
+++ b/app/scss/dashboard/_myAccount.scss
@@ -1,11 +1,3 @@
-//
-// @mixin vertical-align {
-//     position: relative;
-//     top: 50%;
-//     -webkit-transform: translateY(-50%);
-//     -ms-transform: translateY(-50%);
-//     transform: translateY(-50%);
-// }
 
 .my-account-page {
   padding: 40px;
@@ -32,15 +24,6 @@
       border-bottom: 1px solid $db-border-color;
     }
     button {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
       height: 90px;
       position: relative;
       h3 {
@@ -48,7 +31,7 @@
         float: left;
       }
       h3:first-child {
-        // @include vertical-align;
+        line-height: 45px;
       }
       h3:last-child {
         float: right;
