--- a/app/scss/home/_header.scss
+++ b/app/scss/home/_header.scss
@@ -9,7 +9,7 @@ header {
   background: -moz-linear-gradient(-45deg,  #2d3a65 0%, #18aed6 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(-45deg,  #2d3a65 0%,#18aed6 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(135deg,  #2d3a65 0%,#18aed6 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d3a65', endColorstr='#18aed6',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d3a65', endColorstr='#18aed6',GradientType=1); /* IE6-9 fallback on horizontal gradient */
   nav {
     height: 75px;
     width: 100%;
